# Plauncher

./: CMakeLists.txt  LauncherDelegate.qml  Main.qml  TaskDelegate.qml  brightnesshandler.cpp  brightnesshandler.h  direction-client-glue.h  launchermodel.cpp  launchermodel.h  main.cpp  settings.cpp  settings.h  shutdown.cpp  shutdown.h  sway_utils.cpp  sway_utils.h  taskhandler.cpp  taskhandler.h  visibilityhandler.h
include/: brightnesshandler.h  direction-client-glue.h  launchermodel.h  screenlock-client-glue.h  taskhandler.h  visibilityhandler.h
src/: brightnesshandler.cpp  main.cpp  settings.cpp  sway_utils.cpp  taskhandler.cpp  visibilityhandler.cpp
